--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "My Next.js App",
+    "name": "Service Workers",
     "short_name": "Next App",
     "description": "A simple Next.js Progressive Web App",
     "start_url": "/",
@@ -8,7 +8,7 @@
     "theme_color": "#000000",
     "icons": [
       {
-        "src": "/icon.png",
+        "src": "/vercel.png",
         "sizes": "192x192",
         "type": "image/png"
       }
